Prevented infinite loop and added valgrind to test
Signed-off-by: Manuel Bertele <manuel.bertele2003@gmail.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,7 @@
 run:
 	make -C ../
 	gcc test.c ../libdoublist.a -o test -I../include
-	./test
+	valgrind --leak-check=full --track-origins=yes ./test
 
 .PHONY: clean
 clean:
