--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,6 @@
 run:
 	make -C ../
-	gcc test.c ../libdoublist.a -o test -I../include
+	gcc test.c ../libdoublist.a -o test -I../include -g
 	valgrind --leak-check=full --track-origins=yes ./test
 
 .PHONY: clean
