--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,7 @@
 run:
 	make -C ../
 	gcc test.c ../libdoublist.a -o test -I../include -g
-	valgrind --leak-check=full --track-origins=yes ./test
+	./test
 
 .PHONY: clean
 clean:
